# RogEm

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  GUIDELINES.md  LICENSE.txt  README.md  beta_test_plan.md  result.txt  tree.txt  vcpkg.json
.github/workflows/: build_and_test.yml  build_and_test_lin.yml  build_and_test_win.yml  cache_dependencies.yml  mirror.yml  release.yml
docs/: COMMIT_FORMAT.md  PROJECT_GUIDELINES.md  QA_STRATEGY.md  TEAM_ORGANISATION.md  TECHNICAL_CHOICES.md
src/: Application.cpp  Application.hpp  BIOS.cpp  BIOS.h  Bus.cpp  Bus.h  CMakeLists.txt  CPU.cpp  CPU.h  Coprocessor.h  Disassembler.cpp  Disassembler.h  GTE.h  InputManager.cpp  InputManager.hpp  Instruction.h  Memory.hpp  MemoryMap.hpp  PsxExecutable.cpp  PsxExecutable.hpp  RAM.cpp  RAM.h  System.cpp  System.hpp  main.cpp
src/Core/: BIOS.cpp  BIOS.h  BIOS.hpp  Bus.cpp  Bus.h  Bus.hpp  CDROM.cpp  CDROM.hpp  CMakeLists.txt  CPU.cpp  CPU.h  CPU.hpp  CacheControl.cpp  CacheControl.hpp  Coprocessor.h  Coprocessor.hpp  DMA.cpp  DMA.hpp  DMAChannel.cpp  DMAChannel.hpp  DigitalPad.cpp  DigitalPad.hpp  Disc.cpp  Disc.hpp  Expansion2.cpp  Expansion2.hpp  GPU.cpp  GPU.hpp  GPUCommand.cpp  GPUCommand.hpp  GTE.cpp  GTE.hpp  InputManager.cpp  InputManager.hpp  Instruction.h  InterruptController.cpp  InterruptController.hpp  Memory.cpp  MemoryControl1.cpp  MemoryControl1.hpp  (+23 more)
src/Debugger/: ABoxLayout.cpp  ABoxLayout.hpp  AssemblyWindow.cpp  AssemblyWindow.hpp  BreakpointWindow.cpp  BreakpointWindow.hpp  Debugger.cpp  Debugger.hpp  Disassembler.cpp  Disassembler.hpp  HBoxLayout.cpp  HBoxLayout.hpp  IWindow.hpp  InstructionWindow.cpp  InstructionWindow.hpp  InstructionsWindow.cpp  InstructionsWindow.hpp  LogWindow.cpp  MemoryWindow.cpp  MemoryWindow.hpp  RegisterWindow.cpp  RegisterWindow.hpp  RegistersWindow.cpp  RegistersWindow.hpp  SettingsWindow.cpp  SettingsWindow.hpp  VBoxLayout.cpp  VBoxLayout.hpp  Widget.cpp  Widget.hpp  Window.cpp  Window.hpp
src/GUI/: AssemblyWindow.cpp  AssemblyWindow.hpp  BreakpointWindow.cpp  BreakpointWindow.hpp  IWindow.hpp  InputMappingWindow.cpp  InputMappingWindow.hpp  KeybindWindow.cpp  KeybindWindow.hpp  LogWindow.cpp  LogWindow.hpp  MainMenuBar.cpp  MainMenuBar.hpp  MemoryWindow.cpp  MemoryWindow.hpp  RegisterWindow.cpp  RegisterWindow.hpp  SettingsWindow.cpp
src/Lib/: CueParser.cpp  CueParser.hpp
src/NewDebugger/: Debugger.cpp  Debugger.hpp
src/core/: BIOS.cpp  BIOS.h  Bus.cpp  Bus.h  CMakeLists.txt  CPU.cpp  CPU.h  DMA.cpp  DMA.hpp  DMAChannel.cpp  DMAChannel.hpp  Disassembler.cpp  Disassembler.h  GPU.cpp  GPU.hpp  GPUCommand.cpp  GPUCommand.hpp  GTE.cpp  GTE.h  InterruptController.cpp  InterruptController.hpp  Memory.cpp  Memory.hpp  MemoryControl1.hpp  MemoryMap.cpp  MemoryMap.hpp  PadAnalog.cpp  PadAnalog.hpp  PadDigital.cpp  PadDigital.hpp  PsxDevice.hpp  RAM.cpp  RAM.h  SIO.cpp  SIO.hpp  SIODevice.hpp  SPU.cpp  SPU.hpp  ScratchPad.cpp  ScratchPad.hpp  (+2 more)
tests/: BIOS_tests.cpp  Bus_tests.cpp  CMakeLists.txt  COP0_tests.cpp  CPU_arithmetic_tests.cpp  CPU_branch_tests.cpp  CPU_comparison_tests.cpp  CPU_cop0_tests.cpp  CPU_exception_tests.cpp  CPU_jump_tests.cpp  CPU_load_tests.cpp  CPU_logical_tests.cpp  CPU_muldiv_tests.cpp  CPU_multiply_tests.cpp  CPU_shift_tests.cpp  CPU_store_tests.cpp  CPU_tests.cpp  CacheControl_tests.cpp  DMAChannel_tests.cpp  DMA_tests.cpp  DMA_transfer_tests.cpp  DigitalPad_tests.cpp  Expansion2_tests.cpp  GPUCommand_tests.cpp  GPU_register_basic_tests.cpp  GTE_CC_CDP_tests.cpp  GTE_calculation_tests.cpp  GTE_calculation_tests_two.cpp  GTE_color_tests.cpp  GTE_coordinate_tests.cpp  GTE_general_tests.cpp  GTE_instructions_tests.cpp  GTE_projections_tests.cpp  InputManager_tests.cpp  InterruptController_tests.cpp  MemoryControl1_tests.cpp  MemoryControl2_tests.cpp  PsxExecutable_tests.cpp  RAM_tests.cpp  SPU_tests.cpp  (+4 more)
